src/test/deca/context/valid/DeclClassTest.deca
class A
{
    protected int a;

    int getA()
    {
        return this.a;
    }
}

{
    A a = new A();
    int x = a.getA();
    println(x);
}