src/test/deca/context/invalid/signature_1.deca
class A {
    protected int x;
    A get(A a) {
        return a;
}
class B extends A {
    int get(A a) {
        return a.x; 
}
}